# sparta-experiments

./: .gitignore  .gitmodules  README.md
baseline/: Cargo.toml  makefile  private.pem
baseline/src/: main.rs  omq.rs  request.rs
baseline/src/omq/: mod.rs
baseline/src/omq/types/: request.rs  send.rs
experiments/: d_scaling.py  d_scaling_legacy.py  d_scaling_storage.py  message_scaling.py  message_scaling_legacy.py  message_scaling_storage.py  run-experiments.sh  submap_scaling.py  submap_scaling_legacy.py  submap_scaling_storage.py  user_and_message_scaling.py
figs/: d_scaling.py  message-scaling.py  submap-scaling.py  user-message-scaling.py
omq/: Cargo.toml
omq/src/: lib.rs  request.rs
omq/src/types/: fetch.rs  mod.rs  request.rs  send.rs
sparta/: Cargo.toml  makefile  run_experiment.sh
sparta-d/: Cargo.toml
sparta-d/src/: load_balancer.rs  main.rs  omap.rs
sparta/.cargo/: config.toml
sparta/src/: load_balancer.rs  main.rs  omap.rs  record.rs
sparta/src/load_balancer/: mod.rs  user_record.rs
